# exowrap

./: .gitignore  README.md  pyproject.toml
notebooks/: analyze_grid.ipynb  explainer.ipynb  test_exowrap.ipynb  test_photometry.ipynb  test_resolution_increase.ipynb
scripts/: compile_grid.py  run_grid.py
src/exowrap/: __init__.py  cli.py  constants.py  model.py  namelist.py  output.py  photometry.py  plotting.py  tools.py
