[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "exowrap"
version = "0.1.0"
description = "A Pythonic wrapper for the ExoREM atmosphere model."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "f90nml>=1.4.3",
    "h5py>=3.0.0",
    "pandas>=1.0.0",
    "numpy>=1.20.0"
]

[project.scripts]
# This links the terminal command 'exowrap' to the main() function inside src/exowrap/cli.py
exowrap = "exowrap.cli:main"

[tool.setuptools.packages.find]
where = ["src"]